ubuntu-dev-tools (0.117) UNRELEASED; urgency=low

  * dgetlp, import-bug-from-debian, suspicious-source:
    Show error messages instead of having the import errors for
    recommended packages (Closes: #613101, LP: #693813).

 -- Benjamin Drung <bdrung@debian.org>  Sat, 12 Feb 2011 23:12:22 +0100

ubuntu-dev-tools (0.116) unstable; urgency=low

  [ Benjamin Drung ]
  * suspicious-source:
    - Add .icns and .java to extension whitelist.
    - Add image/vnd.adobe.photoshop to the mime-type whitelist.
  * data/debian.csv: Add wheezy and release date of squeeze.
  * *distro-info: Add a "created" column to the data.
  * wrap-and-sort: Wrap and sort Build-Conflicts too.
  * Move debian-keyring from Suggests to Recommends (LP: #717245).
  * ubuntutools/test/example_package.py: Use dpkg-source directly instead of
    dpkg-buildpackage to avoid running fakeroot inside fakeroot which leads
    to a FTBFS on natty.

  [ Stefano Rivera ]
  * debian/copyright:
    - Files is space-separated, not comma.
    - Bump Format revision.

  [ Kees Cook ]
  * ubuntutools/update_maintainer.py: do nothing if the rules file
    already manages XSBC-Original (e.g. python).
  * ubuntutools/test/test_update_maintainer.py: update test cases to
    handle checking for debian/rules.
  * mk-sbuild: work around apt's invocation of GPG needing root's
    .gnupg directory to already exist.

  [ Michael Bienia ]
  * Use the new web_link attribute of LP objects instead of our own
    translate_api_web() function.

 -- Benjamin Drung <bdrung@debian.org>  Sat, 12 Feb 2011 19:02:59 +0100

ubuntu-dev-tools (0.115) unstable; urgency=low

  [ Stefano Rivera ]
  * Catch DownloadErrors in ubuntutools.archive users. (LP: #708862)

  [ Scott Kitterman ]
  * Update requestsync to send to Launchpad's MX record instead of hard
    coding to the old MX (fiordland) (LP: #710925)
  * Recommend python-dns

 -- Benjamin Drung <bdrung@debian.org>  Tue, 01 Feb 2011 13:58:07 +0100
