@@ -26,7 +26,8 @@ WHITELIST = [re.compile(': %s$' % x) for x in (
     # http://www.logilab.org/ticket/51250:
     r"Module 'hashlib' has no '(md5|sha(1|224|256|384|512))' member",
     # mox:
-    r"Instance of 'GpgInfo' has no 'WithSideEffects' member",
+    r"Instance of '.+' has no '(WithSideEffects|MultipleTimes|AndReturn)' "
+    r"member",
 )]
 
 class PylintTestCase(unittest.TestCase):
